# SigConvent

./: CMakeLists.txt  LICENSE  README.md  in.txt
internal/: 4B3T.cc  4B3T.hh  FOMOT.cc  FOMOT.hh  app.cc  app.hh  base.cc  base.hh  baseconverter.cc  baseconverter.hh  defines.hh  input.cc  input.hh  main.cc  out.txt  settings.cc  settings.hh  signal.cc  signal.hh
